RESOLVED FIXED228554
IDBFactory.databases should not return databases with invalid version
https://bugs.webkit.org/show_bug.cgi?id=228554
Summary IDBFactory.databases should not return databases with invalid version
Sihui Liu
Reported 2021-07-28 10:10:09 PDT
...
Attachments
Patch (18.57 KB, patch)
2021-07-28 10:27 PDT, Sihui Liu
no flags
Patch (18.81 KB, patch)
2021-07-28 13:46 PDT, Sihui Liu
no flags
Patch (18.81 KB, patch)
2021-07-28 14:12 PDT, Sihui Liu
no flags
Sihui Liu
Comment 1 2021-07-28 10:27:18 PDT
Sihui Liu
Comment 2 2021-07-28 13:46:28 PDT
Sihui Liu
Comment 3 2021-07-28 14:12:44 PDT
EWS
Comment 4 2021-07-28 16:35:49 PDT
Committed r280410 (240050@main): <https://commits.webkit.org/240050@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 434464 [details].
Radar WebKit Bug Importer
Comment 5 2021-07-28 16:36:18 PDT
WebKit Commit Bot
Comment 6 2022-01-16 15:05:51 PST
Re-opened since this is blocked by bug 235285
Note You need to log in before you can comment on or make changes to this bug.