IDBFactory.databases should not return databases with invalid version https://bugs.webkit.org/show_bug.cgi?id=228554

Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/IndexedDB/get-databases.any-expected.txt:
* web-platform-tests/IndexedDB/get-databases.any.worker-expected.txt:

Source/WebCore:

To get database information, we used to open all database files and read from them. To avoid opening new
connection to databases that are already opened, and to ensure we get the latest information, for database that
is already opened, we should get its information from UniqueIDBDatabase directly. If database is not opened, we
open its file and read. By doing this, we also fix the issue that no databases are returned in private browsing
(since there is no file created).

Also, version 0 means the database is just created and has not finished version change transaction (version 1
is the first valid version according to spec), so we should not return databases with version 0.

Tests: storage/indexeddb/getdatabases-private.html
       storage/indexeddb/getdatabases.html

* Modules/indexeddb/server/IDBBackingStore.h:
* Modules/indexeddb/server/IDBServer.cpp:
(WebCore::IDBServer::getDatabaseNameAndVersionFromOriginDirectory):
(WebCore::IDBServer::IDBServer::getAllDatabaseNamesAndVersions):
* Modules/indexeddb/server/MemoryIDBBackingStore.h:
* Modules/indexeddb/server/SQLiteIDBBackingStore.h:
* Modules/indexeddb/server/UniqueIDBDatabase.cpp:
(WebCore::IDBServer::UniqueIDBDatabase::didDeleteBackingStore):
(WebCore::IDBServer::UniqueIDBDatabase::filePath const):
(WebCore::IDBServer::UniqueIDBDatabase::nameAndVersion const):
* Modules/indexeddb/server/UniqueIDBDatabase.h:

LayoutTests:

* storage/indexeddb/getdatabases-expected.txt: Added.
* storage/indexeddb/getdatabases-private-expected.txt: Added.
* storage/indexeddb/getdatabases-private.html: Added.
* storage/indexeddb/getdatabases.html: Added.
* storage/indexeddb/resources/getdatabases.js: Added.
(test):


Canonical link: https://commits.webkit.org/240050@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280410 268f45cc-cd09-0410-ab3c-d52691b4dbfc